--- a/Exercises/1.MD
+++ b/Exercises/1.MD
@@ -7,6 +7,9 @@ se está sobre um dos eixos cartesianos ou na origem (x = y = 0).
 Se o ponto estiver na origem, escreva a mensagem “Origem”.
 Se o ponto estiver sobre um dos eixos escreva “Eixo X” ou “Eixo Y”, conforme for a situação.
 
+![Screenshot 2023-03-05 at 18 24 20](https://user-images.githubusercontent.com/25457238/222986863-3218fd2f-0021-4e05-afe9-34e08f066ef1.png)
+
+
 Entrada
 
 - A entrada contém as coordenadas de um ponto.
